--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.8",
+    "react-paginate": "^7.0.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-paginate": "^6.2.1",
     "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
